# uni-lib-poc

./: Cargo.toml  Makefile.toml
ts-pkg/: package.json  pnpm-lock.yaml  tsconfig.json
wasm-pkg/: Cargo.toml  Makefile.toml  exports.wai  imports.wai
wasm-pkg/src/: lib.rs
