[package]
name = "uni-lib-rust-poc"
version = "0.1.0"
edition = "2021"
description = "POC of universal wasm library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wai-bindgen-rust = "0.2.3"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasmer]
namespace = "toadslop"
abi = "none"

bindings = { wai-bindgen = "0.1.0", exports = "exports.wai", imports = [
    "imports.wai",
], wai-version = "0.2.3" }
